Fixing bug 267269. Make nsIProcess::Run() use NSPR code for running the process if arguments are passed. r=pinkerton@aol.net, sr=bzbarsky@mit.edu